# min-auth

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  Makefile.am  README.md  configure.ac  env  min-auth.service  schema.sql
admin/: Cargo.toml
admin/src/: admin.rs  lib.rs  service.rs
admin/src/service/: login.rs  update.rs  users.rs
auth/: .gitignore  Cargo.toml  Makefile.am  build.rs  configure.ac
auth/etc/: Makefile.am
auth/etc/min-auth/: .gitignore  Makefile.am
auth/scripts/: .gitignore  Makefile.am  min-auth-monitor.t
auth/share/min-auth/: Makefile.am
auth/share/min-auth/service/: Makefile.am  min-auth@.service.t
auth/src/: config.rs  main.rs
backend/: Cargo.toml  Makefile.am
backend/etc/min-auth/: Makefile.am
backend/src/: config.rs
background/: .gitignore  Cargo.toml
background/etc/min-auth/: .gitignore  Makefile.am
background/scripts/: min-auth-background-dispatch
background/src/: config.rs
common/: Cargo.toml
common/src/: base35.rs  base58.rs  config.rs  credentials.rs  data.rs  error.rs  genid.rs  lib.rs  requests.rs  threadid.rs  users.rs  utils.rs
common/src/config/: admin.rs  auth.rs  backend.rs  parts.rs
common/src/data/: credentials.rs  requests.rs  users.rs
common/src/utils/: genid.rs
common/test/requests/: create-user-1.json  delete-user-1.json  update-user-1.json  update-user-2.json
common/test/users/: foo1.json  foo2.json
common/test/users/bar/: bar.json
common/test/users/bar/baz/: baz.json
database/: Cargo.toml
database/schema/: tables.sql
database/src/: wrapper.rs
etc/min-auth/: .gitignore  Makefile.am
schema/: tables.sql  views.sql
scripts/: min-auth-monitor.t
service/: Cargo.toml
share/min-auth/: Makefile.am
share/min-auth/html/: show.html
share/min-auth/service/: min-auth@.service.t
src/: config.rs  credentials.rs  error.rs  genid.rs  lib.rs  main.rs  requests.rs  utils.rs
web/: Cargo.toml
web/etc/: Makefile.am
web/etc/min-auth/: Makefile.am
web/share/min-auth-web/html/: Makefile.am  edit.html  index.html
web/share/min-auth-web/service/: Makefile.am
web/src/: main.rs
