[package]
name = "min-auth"
version = "3.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.1"
actix-web-httpauth = "0.8.0"
chrono = "0.4.38"
env_logger = "0.11.5"
futures-util = "0.3.30"
getopts = "0.2.21"
hex = "0.4.3"
itertools = "0.13.0"
log = "0.4.19"
mysql_async = "0.34.1"
rand = { version = "0.8.5", features = ["std_rng"] }
redis = { version = "0.26.1", features = ["tokio-comp"] }
serde = "1.0.183"
serde_json = "1.0.104"
sha1 = "0.10.6"
sha2 = "0.10.8"
time = "0.3.36"
tokio = { version = "1.39.2", features = ["full"] }
toml = "0.8.19"

[dev-dependencies]
test-log = "0.2.16"
