[package]
name = "min-auth-admin"
version = "3.0.0"
edition = "2021"

[dependencies]
aes-gcm = "0.10.3"
bytes = "1.7.2"
env_logger = "0.11.5"
futures-util = "0.3.31"
getopts = "0.2.21"
gpgme = "0.11.0"
http-auth-basic = "0.3.5"
http-body-util = "0.1.2"
hyper = { version = "1.4.1", features = ["full"] }
hyper-util = { version = "0.1.9", features = ["full"] }
log = "0.4.22"
min-auth-common = { version = "3.0.0", path = "../common" }
redis = { version = "0.27.4", features = ["tokio-comp"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
tokio = { version = "1.40.0", features = ["full"] }
