[package]
name = "min-auth-auth"
version = "3.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.19"
env_logger = "0.10.0"
getopts = "0.2.21"
actix-web = "4.3.1"
actix-web-httpauth = "0.8.0"
mysql = "24.0.0"
redis = { version = "0.23.1", features = ["tokio-comp"] }
toml = "0.7.6"
serde = "1.0.183"
serde_json = "1.0.104"
sha2 = "0.10.7"
hex = "0.4.3"
