[package]
name = "min-auth-auth"
version = "3.0.0"
edition = "2021"

[dependencies]
min-auth-common = { path = "../common" }
actix-web = "4.9.0"
actix-web-httpauth = "0.8.2"
env_logger = "0.11.5"
futures-util = "0.3.30"
getopts = "0.2.21"
log = "0.4.22"
mysql_async = "0.34.2"
redis = { version = "0.26.1", features = ["tokio-comp"] }
serde = "1.0.207"
serde_json = "1.0.124"
tokio = { version = "1.39.2", features = ["full"] }
toml = "0.8.19"
