[package]
name = "min-auth-backend"
version = "3.0.0"
edition = "2021"

[dependencies]
env_logger = "0.11.5"
getopts = "0.2.21"
min-auth-common = { path = "../common" }
mysql_async = "0.34.2"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.124"
tokio = { version = "1.39.2", features = ["full"] }
