[package]
name = "min-auth-common"
version = "3.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.38"
itertools = "0.12.1"
log = "0.4.21"
rand = { version = "0.8.5", features = ["std_rng"] }
sha1 = "0.10.6"

[dev-dependencies]
test-log = "0.2.15"
